# airflow-example

./: airflow.cfg  airflow.db  docker-compose.yaml  main.py  pyproject.toml
dags/: create_dag_with_python.py  dag_with_cron_expression.py  dag_worflow_api.py  our_first_dag.py
logs/scheduler/: latest
