[tool.poetry]
name = "airflow-example"
version = "0.1.0"
description = ""
authors = ["Furkan Melih Ercan <furkan.ercan@b2metric.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
apache-airflow = "^2.10.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
